@@ -1,0 +1,10 @@
+package com.nhl.link.etl.load;
+
+import com.nhl.link.etl.TargetListener;
+
+/**
+ * @deprecated since 1.3 in favor of {@link TargetListener} interface.
+ */
+public interface LoadListener<T> extends TargetListener<T> {
+
+}
