@@ -3,6 +3,7 @@ Release 1.3
 #25 Parameterized queries for Extractors
 #26 Refactoring ETL stack to expose processing chain in the object design
 #27 Upgrade to official Cayenne 4.0.M2
+#28 Refactor TaskBuilder to be able to split it into specialized builders 
 
 Release 1.2 2014-12-08
 
